[package]
name = "client_test"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
wasmcloud-actor-core = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"]}
wasmcloud-actor-http-server = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"]}
wasmcloud-actor-http-client = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"]}
wasmcloud-actor-logging = { git = "https://github.com/wasmcloud/actor-interfaces", branch = "main", features = ["guest"]}

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
